# arbiverse-talk-2024

./: GOALS.md  README.md  README.slide  follow-my-frens.html  overview-of-lending-protocols-aave-variable-stable-rate.py  overview-of-lending-protocols-compound-v1-1.py  overview-of-lending-protocols-how-do-they-stack-up.html  overview-of-stylus-classic.txt  overview-of-stylus-evm.huff  overview-of-stylus-multivm-inside.html  overview-of-stylus-multivm.html  overview-of-stylus-multivm.txt  overview-rust-1.rs  overview-rust-2.rs  overview-rust-3.rs  quick-setup-installation.html  reference.py  remappings.txt
.hypothesis/examples/ee6c26733040a1c7/: 008a46378181b5ce  19914432005ea887  4b7470d140c334bf  649934dee6656438  738f034e49f03ed5  8a8485370a37d4c9  b05baf577abbbfbb  bd32312f1b39a929
cache/: solidity-files-cache.json
crates/fizzbuzzer/: Cargo.toml  Makefile
crates/fizzbuzzer/src/: lib.rs
crates/hello-world/: Cargo.toml  Makefile  tests.sh
crates/hello-world/proptest-regressions/: lib.txt
crates/lending-stablecoin/: Cargo.toml
pkg/: StakedArbUSD.sol  build.mk
pkg/fizzbuzzer/: tests.sh
pkg/fizzbuzzer/proptest-regressions/: lib.txt
pkg/hello-world/src/: lib.rs
pkg/lending-stablecoin/: Cargo.toml  Makefile  tests.sh
pkg/lending-stablecoin/src/: chainlink.rs  chainlink_call.rs  chainlink_call_host.rs  chainlink_call_wasm.rs  contract_factory.rs  contract_lender.rs  erc20_call.rs  erc20_call_host.rs  erc20_call_wasm.rs  error.rs  immutables.rs  lending_call.rs  lending_call_host.rs  lending_call_wasm.rs  lib.rs
pkg/lending-stablecoin/tests/: e2e_tests.proptest-regressions  e2e_tests.rs
