[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib_hello_world"
edition = "2021"

[profile.release]
codegen-units = 1
panic = "abort"
opt-level = "z"
strip = true
lto = true
debug = false
rpath = false
debug-assertions = false
incremental = false

[dependencies]
alloy-primitives = "0.7.6"
stylus-sdk = "0.6.0"

[dev-dependencies]
proptest = "1.5.0"
